--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,10 @@ before_install:
   - brew upgrade > /dev/null
   - ruby --version
   - echo ls_ruby_bindir; ls "/System/Library/Frameworks/Ruby.framework/Versions/${RUBY_TEST_VERSION}/usr/bin"
+  - mkdir -p $(brew --prefix)/Library/Taps/homebrew
+  - ln -s $PWD $(brew --prefix)/Library/Taps/domt4/homebrew-tex
+  - ln -s $PWD $(brew --prefix)/Library/Taps/domt4/homebrew-cask
+  - brew tap --repair
   - brew tap domt4/homebrew-tex
   - brew tap caskroom/homebrew-cask
   - brew-cask install basictex
