--- a/.travis.yml
+++ b/.travis.yml
@@ -14,24 +14,21 @@ matrix:
 before_install:
   - rvm use system
   - export PATH="/System/Library/Frameworks/Ruby.framework/Versions/${RUBY_TEST_VERSION}/usr/bin":"$PATH"
+  - printenv PATH
   - brew update
   - brew upgrade > /dev/null
   - ruby --version
   - echo ls_ruby_bindir; ls "/System/Library/Frameworks/Ruby.framework/Versions/${RUBY_TEST_VERSION}/usr/bin"
-  - mkdir -p $(brew --prefix)/Library/Taps/homebrew
-  - ln -s $PWD $(brew --prefix)/Library/Taps/domt4/homebrew-tex
-  - ln -s $PWD $(brew --prefix)/Library/Taps/domt4/homebrew-cask
-  - brew tap --repair
-  - brew tap domt4/homebrew-tex
-  - brew tap caskroom/homebrew-cask
-  - brew-cask install basictex
   - which brew
-  - which brew-cask
   - brew --prefix
+  - brew tap domt4/homebrew-tex
   - export PATH="/usr/texbin":"$PATH"
   - printenv PATH
   - gem install mocha minitest
   - mocha version
+  - echo $PWD
+  - curl -L http://mirrors.rit.edu/CTAN/systems/mac/mactex/mactex-basic.pkg -o mactex-basic.pkg
+  - sudo installer -pkg mactex-basic.pkg -target /
 script:
   - brew test-bot $TRAVIS_COMMIT
 notifications:
