--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,13 @@ before_install:
   - brew tap domt4/homebrew-tex
   - export PATH="/usr/texbin":"$PATH"
   - printenv PATH
-  - sudo gem install mocha minitest
+  - which gem
+  - sudo gem install mocha minitest --bindir="/System/Library/Frameworks/Ruby.framework/Versions/${RUBY_TEST_VERSION}/usr/bin"
   - sudo mocha version
   - echo $PWD
   - curl -L http://mirrors.rit.edu/CTAN/systems/mac/mactex/mactex-basic.pkg -o mactex-basic.pkg
   - sudo installer -pkg mactex-basic.pkg -target /
+
 script:
   - brew test-bot $TRAVIS_COMMIT
 notifications:
