--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ install:
   - sudo installer -pkg mactex-basic.pkg -target /
 
 script:
-  - brew test-bot $TRAVIS_COMMIT
+  - brew test-bot $TRAVIS_COMMIT --no-bottle --skip-setup -d
 
 notifications:
     email: false
