travis: try being a manual test-bot
Tries to become a manual test bot instead of actually using the
brew test bot itself, which may not work inside taps.

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,11 @@ install:
   - sudo installer -pkg mactex-basic.pkg -target /
 
 script:
-  - brew test-bot $TRAVIS_COMMIT --no-bottle --skip-setup -d
+  - brew audit --strict $TRAVIS_COMMIT
+  - brew uses $TRAVIS_COMMIT
+  - brew install --verbose $TRAVIS_COMMIT
+  - brew test --verbose $TRAVIS_COMMIT
+  - brew uninstall --force $TRAVIS_COMMIT
 
 notifications:
     email: false
