Revert "travis: try being a manual test-bot"
This reverts commit 4653215ba0665573116a9bba5de932c8150b15ea.

It was a bad idea.

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,11 +33,7 @@ install:
   - sudo installer -pkg mactex-basic.pkg -target /
 
 script:
-  - brew audit --strict $TRAVIS_COMMIT
-  - brew uses $TRAVIS_COMMIT
-  - brew install --verbose $TRAVIS_COMMIT
-  - brew test --verbose $TRAVIS_COMMIT
-  - brew uninstall --force $TRAVIS_COMMIT
+  - brew test-bot $TRAVIS_COMMIT --no-bottle --skip-setup -d
 
 notifications:
     email: false
