travis: please find the commit properly
YOU CAN DO IT TRAVIS. WE'RE SO CLOSE.

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ install:
   - sudo installer -pkg mactex-basic.pkg -target /
 
 script:
+  - cd /usr/local
   - brew test-bot $TRAVIS_COMMIT --no-bottle --skip-setup -d
 
 notifications:
