--- a/.travis.yml
+++ b/.travis.yml
@@ -20,21 +20,21 @@ before_install:
   - ruby --version
   - echo ls_ruby_bindir; ls "/System/Library/Frameworks/Ruby.framework/Versions/${RUBY_TEST_VERSION}/usr/bin"
   - which brew
-  - brew --prefix
-  - brew tap domt4/homebrew-tex
   - export PATH="/usr/texbin":"$PATH"
   - printenv PATH
-  - which gem
 
 install:
   - sudo "/System/Library/Frameworks/Ruby.framework/Versions/${RUBY_TEST_VERSION}/usr/bin/gem" install mocha minitest --bindir="/System/Library/Frameworks/Ruby.framework/Versions/${RUBY_TEST_VERSION}/usr/bin"
   - echo $PWD
   - curl -L http://mirrors.rit.edu/CTAN/systems/mac/mactex/mactex-basic.pkg -o mactex-basic.pkg
   - sudo installer -pkg mactex-basic.pkg -target /
+  - mkdir -p $(brew --prefix)/Library/Taps/homebrew
+  - ln -s $PWD $(brew --prefix)/Library/Taps/domt4/homebrew-tex
+  - brew tap --repair
 
 script:
-  - cd /usr/local
-  - brew test-bot $TRAVIS_COMMIT --no-bottle --skip-setup -d
+  - brew test-bot $TRAVIS_COMMIT --no-bottle --skip-setup -d |sed -n 's/^==> //p' |sh -ex
 
 notifications:
     email: false
+    use_notice: true
