--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
   - curl -L http://mirrors.rit.edu/CTAN/systems/mac/mactex/mactex-basic.pkg -o mactex-basic.pkg
   - sudo installer -pkg mactex-basic.pkg -target /
   - mkdir -p $(brew --prefix)/Library/Taps/homebrew
-  - ln -s $PWD $(brew --prefix)/Library/Taps/domt4/homebrew-tex
+  - ln -s $PWD $(brew --prefix)/Library/Taps/domt4/
   - brew tap --repair
 
 script:
