--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,9 @@ install:
 script:
   - cd $(brew --prefix)
   - if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then
-      brew test-bot $TRAVIS_COMMIT --skip-setup --tap=homebrew/tex;
+        brew test-bot $TRAVIS_COMMIT --skip-setup --verbose --tap=homebrew/tex;
     else
-      brew test-bot $TRAVIS_COMMIT --skip-setup --tap=homebrew/tex --ci-pr;
+        brew test-bot $TRAVIS_COMMIT --skip-setup --verbose --tap=homebrew/tex --ci-pr;
     fi
 
 notifications:
